fix(course-user): 수업 사용자 조회 및 등록 API 수정 (여전히 사용자 등록 API에 타 교수가 등록될 수 있다는 버그가 존재)